examples/modules/negative/example_eight.compact
// This file is part of Compact.
// Copyright (C) 2025 Midnight Foundation
// SPDX-License-Identifier: Apache-2.0
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//  	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Test7: generic module
module Test6a<T> {
  export circuit test6a(var6: Bytes<1>): T {
    return var6[0] as T;
  }
}

module Test6b {
  import { test6a as t6a } from Test6a<Field>;
  import { test6a as t6a } from Test6a<Uint<32>>;

  export circuit test6b(): Field {
    return t6a(Bytes[1]);
  }
}

import { test6b as t6b } from Test6b;
